# pyASM

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test.py
objects/: object_test.py  targets.py  targets_test.py
web/: app.py
web/flask/: test.py
web/flet/: app.py  main.py  sidebar.py
web/objects/: sidebar.py
web/pages/: dashboard.py  targets.py
web/tryout-webpage/flet/: animate.py  app.py  background_page.py  foreground_page.py  views.py
web/utils/: colors.py
